Bug 326169 - No feedback provided when checking for updates
Summary: No feedback provided when checking for updates
Status: VERIFIED FIXED
Alias: None
Product: Discover
Classification: Applications
Component: Updates (other bugs)
Version First Reported In: unspecified
Platform: Kubuntu Linux
: NOR major
Target Milestone: ---
Assignee: Jonathan Thomas
URL:
Keywords:
: 325803 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-10-17 23:35 UTC by Scott Kitterman
Modified: 2016-03-02 13:25 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Scott Kitterman 2013-10-17 23:35:58 UTC
In previous released if you clicked "check for updates" there was visual feedback that something was in progress.  The is highly disturbing because it looks like clicking the button did nothing.  This coupled with the fact that sometimes it does fail (see the next bug I'm about to file) makes the updater pretty unusable to check for updates.

Reproducible: Always




This is a severe usability regression.
Comment 1 Aleix Pol 2013-11-04 16:56:03 UTC
Git commit 753fdc3a4eaa84ff53951a2037a57d7e1a9388a7 by Aleix Pol.
Committed on 04/11/2013 at 16:55.
Pushed by apol into branch '2.1'.

Make the update cache Transaction to mark the apt backend as progressing

This way we get a nice progress bar when updating the cache.

M  +10   -0    libmuon/backends/ApplicationBackend/ApplicationBackend.cpp
M  +1    -0    libmuon/backends/ApplicationBackend/ApplicationBackend.h
M  +1    -2    libmuon/backends/ApplicationBackend/ApplicationUpdates.h

http://commits.kde.org/muon/753fdc3a4eaa84ff53951a2037a57d7e1a9388a7
Comment 2 Aleix Pol 2013-11-04 17:21:41 UTC
*** Bug 325803 has been marked as a duplicate of this bug. ***
Comment 3 Aleix Pol 2013-11-04 17:22:36 UTC
*** Bug 326286 has been marked as a duplicate of this bug. ***
Comment 4 Rohan Garg 2013-11-05 14:53:16 UTC
Verified fix in 2.1 branch