Make the update cache Transaction to mark the apt backend as progressing

This way we get a nice progress bar when updating the cache.

BUG: 326169