libmuon/backends/ApplicationBackend/ApplicationUpdates.h
@@ -64,10 +64,9 @@ public:
     virtual QList<QAction*> messageActions() const;
     void setupTransaction(QApt::Transaction *trans);
     virtual bool isMarked(AbstractResource* res) const;
+    void setProgressing(bool progressing);
 
 private:
-    void setProgressing(bool progressing);
-    
     QPointer<QApt::Transaction> m_trans;
     QApt::Backend* m_aptBackend;
     ApplicationBackend* m_appBackend;
